extract question, local storage fix

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,5 +12,11 @@
       "48": "logo192.png",
       "128": "logo192.png"
     }
-  }
+  },
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "scripting",
+    "storage"
+  ]
 }
