--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,7 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html",
+    "options_page": "options.html",
     "default_title": "Mermaid",
     "default_icon": {
       "16": "logo192.png",
